SHOW TABLE STATUS displayed wrong Row_format for myisampack'ed tables. (Bug #427)

sql/sql_show.cc:
  SHOW TABLE STATUS displayed wrong Row_format for myisampack'ed tables.